# ups-invoice-analyzer

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: column-reference.md
src/: __init__.py  analyzer.py  parser.py  report.py  visualizations.py
